# test_20k_fastapi

./: .editorconfig  Makefile  README.md  pyproject.toml
src/: server.py
