[tool.poetry]
name = "test-20k-fastapi"
version = "0.1.0"
description = ""
authors = ["grm <golosov_SA@mail.ru>"]
readme = "README.md"
packages = [{include = "test_20k_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
